# wgpu_terminal

./: .gitmodules  Cargo.toml  README.md
.github/workflows/: x86-linux.yml  x86-windows.yml
src/circular_buffer/: Cargo.toml
src/circular_buffer/src/: circular_buffer.rs  lib.rs  unix.rs  win32.rs
src/circular_buffer_channel/: Cargo.toml
src/circular_buffer_channel/src/: channel.rs  lib.rs
src/conpty/: Cargo.toml
src/conpty/src/: lib.rs  pipe.rs  process.rs
src/conpty/tests/: pipe.rs  process.rs
src/demo/: Cargo.toml
src/demo/src/: app.rs  app_events.rs  app_window.rs  frame_counter.rs  lib.rs  main.rs  terminal_reader.rs  terminal_target.rs  terminal_window.rs
src/glyph_grid/: Cargo.toml
src/glyph_grid/src/: glyph_atlas.rs  glyph_cache.rs  glyph_grid.rs  lib.rs  view_2d.rs
src/glyph_grid_renderer/: Cargo.toml
src/glyph_grid_renderer/src/: glyph_atlas.rs  glyph_grid.rs  glyph_mesh.rs  lib.rs  render_params.rs  renderer.rs  shader.wgsl
src/headless_demo/: Cargo.toml
src/headless_demo/src/: main.rs
src/terminal/: Cargo.toml  README.md
src/terminal/src/: colour_table.rs  lib.rs  parser.rs  primitives.rs  scrollback_buffer.rs  terminal.rs  terminal_core.rs  terminal_display.rs  terminal_keyboard.rs  terminal_parser.rs  terminal_process.rs  terminal_renderer.rs  terminal_window.rs  utf8_parser.rs  viewport.rs
src/terminal/tests/: basic.rs  test_terminal.rs
src/terminal_process/: Cargo.toml
src/terminal_process/src/: common.rs  lib.rs  process.rs  unix.rs  win32.rs
src/tile_renderer/: Cargo.toml
src/tile_renderer/src/: glyph_atlas.rs  glyph_cache.rs  glyph_generator.rs  lib.rs  lru_list.rs  renderer.rs
src/unix_pty/: Cargo.toml
src/unix_pty/src/: lib.rs  master_pty.rs  process.rs
src/vt100/: Cargo.toml
src/vt100/src/: command.rs  common.rs  encoder.rs  graphic_style.rs  key_input.rs  lib.rs  misc.rs  parser.rs  screen_mode.rs
