[workspace]
resolver = "2"
members = [
    "bin/demo",
    "bin/tile_renderer",
    "src/circular_buffer",
    "src/circular_buffer_channel",
    "src/terminal",
    "src/terminal_process",
]

[workspace.dependencies]
bytemuck = { version = "1.14.3", features = ["derive" ] }
cgmath = { git = "https://github.com/rustgd/cgmath.git", version = "0.18.0", features = ["bytemuck"] }
log = { version = "0.4.20" }
fontdue = { version = "0.8.0" }
wgpu = { version = "0.19.0" }

[profile.release-with-debug]
inherits = "release"
debug = true
