[workspace]
resolver = "2"
members = [
    "bin/*",
    "src/*",
]
exclude = [
    "src/unix_pty",
    "src/conpty",
]

[workspace.dependencies]
bytemuck = { version = "1.14.3", features = ["derive" ] }
cgmath = { git = "https://github.com/rustgd/cgmath.git", version = "0.18.0", features = ["bytemuck"] }
log = { version = "0.4.20" }
fontdue = { version = "0.8.0" }
wgpu = { version = "0.19.0" }

[profile.release-with-debug]
inherits = "release"
debug = true
