[workspace]
resolver = "2"
members = [
    "bin/*",
    "src/*",
]

[workspace.dependencies]
cgmath = { git = "https://github.com/rustgd/cgmath.git", version = "0.18.0", features = ["bytemuck"] }
fontdue = { version = "0.8.0" }
wgpu = { version = "0.19.0" }

[profile.release-with-debug]
inherits = "release"
debug = true
