[package]
name = "wgpu_terminal"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = { workspace = true, features = ["derive" ] }
cgmath = { workspace = true, features = ["bytemuck"] }
# terminal
vt100 = { version = "0.0.1", path = "../vt100" }
terminal = { version = "0.0.1", path = "../terminal" }
terminal_process = { version = "0.0.1", path = "../terminal_process" }
crossbeam-channel = { version = "0.5" }
# graphics
fontdue = { workspace = true }
tile_renderer = { version = "0.0.1", path = "../tile_renderer" }
wgpu = { workspace = true }
winit = { version = "0.29.0" }
# logging
log = { workspace = true }
simple_logger = { version = "4.3.3", features = ["colors", "threads", "stderr"] }
# executable
clap = { version = "4.5.1", features = ["derive"] }
pollster = { version = "0.3.0" }
anyhow = { version = "1.0.80" }
#[cfg(windows)]
conpty = { workspace = true }
#[cfg(unix)]
nix = { version = "0.28.0", features = ["term", "process"] }
