[package]
name = "glyph_grid_renderer"
version = "0.0.1"
edition = "2021"

[dependencies]
glyph_grid = { version = "0.0.1", path = "../glyph_grid" }
bytemuck = { workspace = true, features = ["derive" ] }
cgmath = { workspace = true, features = ["bytemuck"] }
log = { workspace = true }
wgpu = { workspace = true }
