[package]
name = "headless_demo"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = { workspace = true, features = ["derive" ] }
cgmath = { workspace = true, features = ["bytemuck"] }
# terminal
terminal = { version = "0.0.1", path = "../terminal" }
conpty = { version = "0.5.1" }
# logging
log = { workspace = true }
simple_logger = { version = "4.3.3", features = ["colors", "threads", "stderr"] }
# executable
clap = { version = "4.5.1", features = ["derive"] }
anyhow = { version = "1.0.80" }
