[package]
name = "terminal_process"
version = "0.0.1"
edition = "2021"

[dependencies]
cgmath = { workspace = true, features = ["bytemuck"] }
log = { workspace = true }
terminal = { version = "0.0.1", path = "../terminal" }

#[cfg(windows)]
conpty = { workspace = true }

#[cfg(unix)]
[dependencies.nix]
version = "0.28.0"
features = [
    "term",
    "process",
]
