[package]
name = "terminal_process"
version = "0.0.1"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.80" }
cgmath = { workspace = true, features = ["bytemuck"] }
log = { version = "0.4.20" }
terminal = { version = "0.0.1", path = "../terminal" }

[target.'cfg(windows)'.dependencies]
conpty = { version = "0.0.1", path = "../conpty" }

[target.'cfg(unix)'.dependencies]
unix_pty = { version = "0.0.1", path = "../unix_pty/" }
