[package]
name = "unix_pty"
version = "0.0.1"
edition = "2021"

[dependencies]
cgmath = { workspace = true, features = ["bytemuck"] }
log = { version = "0.4.20" }
thiserror = { version = "1.0.58" }

[dev-dependencies]
test-log = "0.2.15"

[target.'cfg(unix)'.dependencies.nix]
version = "0.28.0"
features = [
    "term",
    "process",
    "fs",
    "ioctl",
    "signal",
]

[target.'cfg(unix)'.dependencies.libc]
version = "0.2.153"
features = ["extra_traits"]
